--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <div id="root">Hello World</div>
+  <div id="root"></div>
+  <script src="dist/bundle.js"></script>
 </body>
+
 
 </html>
