--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/708066c052.js" crossorigin="anonymous"></script>
   <title>Beer Necessities</title>
 </head>
 
