adds landing page UI, header components

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/708066c052.js" crossorigin="anonymous"></script>
   <title>Beer Necessities</title>
 </head>
